--- a/index.html
+++ b/index.html
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
   <title>Document</title>
 </head>
+
 <body>
   <script type="text/javascript">
 
-  const config = {
+    const config = {
       type: Phaser.AUTO,
       width: 800,
       height: 600,
+      physics: {
+        default: 'arcade',
+        arcade: {
+          gravity: { y: 300 },
+          debug: false
+        }
+      },
       scene: {
-          preload: preload,
-          create: create,
-          update: update
+        preload: preload,
+        create: create,
+        update: update
       }
-  };
+    };
 
-  let game = new Phaser.Game(config);
+    let game = new Phaser.Game(config);
 
-  function preload ()
-  {
+    function preload() {
       this.load.image('sky', 'assets/sky.png');
       this.load.image('ground', 'assets/platform.png');
       this.load.image('star', 'assets/star.png');
       this.load.image('bomb', 'assets/bomb.png');
       this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
-  }
+    }
 
-  function create ()
-  {
-    this.add.image(400, 300, 'sky');
-  }
+    function create() {
+      this.add.image(400, 300, 'sky');
+    
+      platforms = this.physics.add.staticGroup();
 
-  function update ()
-  {
-  }
+      platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+      platforms.create(600, 400, 'ground');
+      platforms.create(50, 250, 'ground');
+      platforms.create(750, 220, 'ground');
 
-</script>
+    }
+
+    function update() {
+    }
+
+  </script>
 </body>
+
 </html>
