--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         frameRate: 10,
         repeat: -1
       });
+
+      this.physics.add.collider(player, platforms);
+
     }
 
     function update() {
