--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       }
     };
 
-    let game = new Phaser.Game(config);
+    const game = new Phaser.Game(config);
+    let player, platforms, cursors;
 
     function preload() {
       this.load.image('sky', 'assets/sky.png');
@@ -76,11 +77,36 @@
         repeat: -1
       });
 
+      cursors = this.input.keyboard.createCursorKeys();
+
       this.physics.add.collider(player, platforms);
 
     }
 
     function update() {
+      if (cursors.left.isDown)
+        {
+            player.setVelocityX(-160);
+
+            player.anims.play('left', true);
+        }
+        else if (cursors.right.isDown)
+        {
+            player.setVelocityX(160);
+
+            player.anims.play('right', true);
+        }
+        else
+        {
+            player.setVelocityX(0);
+
+            player.anims.play('turn');
+        }
+
+        if (cursors.up.isDown && player.body.touching.down)
+        {
+            player.setVelocityY(-330);
+        }
     }
 
   </script>
