--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     };
 
     const game = new Phaser.Game(config);
-    let player, platforms, cursors;
+    let player, platforms, cursors, stars;
 
     function preload() {
       this.load.image('sky', 'assets/sky.png');
@@ -77,9 +77,24 @@
         repeat: -1
       });
 
+      stars = this.physics.add.group({
+            key: 'star',
+            repeat: 11,
+            setXY: { x: 12, y: 0, stepX: 70 }
+        });
+
+        stars.children.iterate(function (child) {
+
+            child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+
+        });
+
       cursors = this.input.keyboard.createCursorKeys();
 
       this.physics.add.collider(player, platforms);
+      this.physics.add.collider(stars, platforms);
+        // this.physics.add.collider(player, stars);
+      this.physics.add.overlap(player, stars, collectStar, null, this);
 
     }
 
@@ -107,6 +122,12 @@
         {
             player.setVelocityY(-330);
         }
+    }
+
+    function collectStar (player, star)
+    {
+        star.disableBody(true, true);
+        console.log(stars);
     }
 
   </script>
