--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ var config = {
         default: 'arcade',
         arcade: {
             gravity: { y: 300 },
-            debug: false
+            debug: true
         }
     },
     scene: {
@@ -49,7 +49,10 @@ function preload ()
     this.load.image('ground', 'assets/platform.png');
     this.load.image('star', 'assets/star.png');
     this.load.image('bomb', 'assets/bomb.png');
-    this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.multiatlas(
+        'cavedude',
+        'assets/cavedude.json',
+        'assets/');
 }
 
 function create ()
@@ -70,29 +73,28 @@ function create ()
     platforms.create(750, 220, 'ground');
 
     // The player and its settings
-    player = this.physics.add.sprite(100, 450, 'dude');
+    player = this.physics.add.sprite(
+        100,
+        450,
+        'cavedude'
+        )
+        .setScale(1);
 
     //  Player physics properties. Give the little guy a slight bounce.
     player.setBounce(0.2);
     player.setCollideWorldBounds(true);
 
     //  Our player animations, turning, walking left and walking right.
-    this.anims.create({
-        key: 'left',
-        frames: this.anims.generateFrameNumbers('dude', { start: 0, end: 3 }),
-        frameRate: 10,
-        repeat: -1
-    });
 
     this.anims.create({
-        key: 'turn',
-        frames: [ { key: 'dude', frame: 4 } ],
-        frameRate: 20
-    });
-
-    this.anims.create({
-        key: 'right',
-        frames: this.anims.generateFrameNumbers('dude', { start: 5, end: 8 }),
+        key: 'walk',
+        frames: this.anims.generateFrameNames('cavedude', {
+            frames: [
+                'dude_walk_0',
+                'dude_walk_1',
+                'dude_walk_2',
+                'dude_walk_3']
+        }),
         frameRate: 10,
         repeat: -1
     });
@@ -134,28 +136,29 @@ function update ()
 {
     if (gameOver)
     {
+        player.anims.stop();
         return;
     }
 
     if (cursors.left.isDown)
     {
         player.setVelocityX(-160);
-
-        player.anims.play('left', true);
+        player.flipX = false;
+        player.anims.play('walk', true);
     }
     else if (cursors.right.isDown)
     {
         player.setVelocityX(160);
-
-        player.anims.play('right', true);
+        player.flipX = true;
+        player.anims.play('walk', true);
     }
     else
     {
         player.setVelocityX(0);
 
-        player.anims.play('turn');
+        player.anims.stop();
     }
-
+    // hoppa
     if (cursors.up.isDown && player.body.touching.down)
     {
         player.setVelocityY(-330);
