--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ var game = new Phaser.Game(config);
 function preload ()
 {
     this.load.image('sky', 'assets/sky.png');
-    this.load.image('ground', 'assets/platform.png');
-    this.load.image('star', 'assets/star.png');
-    this.load.image('bomb', 'assets/bomb.png');
+    this.load.image('ground', ['assets/platform.png', 'assets/platform.png']);
+    this.load.image('star', ['assets/star.png', 'assets/star.png']);
+    this.load.image('bomb', ['assets/bomb.png', 'assets/bomb.png']);
     this.load.multiatlas(
         'cavedude',
         'assets/cavedude.json',
@@ -65,12 +65,12 @@ function create ()
 
     //  Here we create the ground.
     //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-    platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+    platforms.create(400, 568, 'ground').setScale(2).refreshBody().setPipeline('Light2D');
 
     //  Now let's create some ledges
-    platforms.create(600, 400, 'ground');
-    platforms.create(50, 250, 'ground');
-    platforms.create(750, 220, 'ground');
+    platforms.create(600, 400, 'ground').setPipeline('Light2D');
+    platforms.create(50, 250, 'ground').setPipeline('Light2D');
+    platforms.create(750, 220, 'ground').setPipeline('Light2D');
 
     // The player and its settings
     player = this.physics.add.sprite(
@@ -78,7 +78,7 @@ function create ()
         450,
         'cavedude'
         )
-        .setScale(1);
+        .setScale(1).setPipeline('Light2D');
 
     //  Player physics properties. Give the little guy a slight bounce.
     player.setBounce(0.2);
@@ -99,6 +99,14 @@ function create ()
         repeat: -1
     });
 
+    this.playerLight = this.lights.addLight(0, 0, 200, 0xffffff, 1).setScrollFactor(0.0);
+    this.lights.setAmbientColor(0xffffff);
+    this.lights.enable();
+    
+    this.playerLight.x = player.x;
+    this.playerLight.y = player.y;
+
+
     //  Input Events
     cursors = this.input.keyboard.createCursorKeys();
 
@@ -112,7 +120,7 @@ function create ()
     stars.children.iterate(function (child) {
 
         //  Give each star a slightly different bounce
-        child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+        child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8)).setPipeline('Light2D');;
 
     });
 
@@ -130,6 +138,7 @@ function create ()
     this.physics.add.overlap(player, stars, collectStar, null, this);
 
     this.physics.add.collider(player, bombs, hitBomb, null, this);
+
 }
 
 function update ()
